--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,17 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-a {
-    text-decoration: none;
-    color: #999;
+
+a:link {
+color: #cc0000;
+}
+a:visited {
+color: #999999;
 }
 a:hover {
-    text-decoration: underline;
+color: #ff3300;
 }
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
