--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,14 @@ nav ul li, footer ul li {
 
 a.publications:link {
 color: blue;
-text-decoration: underline;
+text-decoration: none;
 }
+
 a.publications:visited {
 color: purple;
-text-decoration: underline;
+text-decoration: none;
 }
+
 a.publications:hover {
 color: red;
 text-decoration: none;
@@ -52,5 +54,5 @@ ul.posts li {
 
 ul.contacts li {
     list-style: none;
-    font-size: 5
+    font-size: 5;
 }
