--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/" class="pagelink">Home</a></li>
+		        	<li><a href="/about" class="pagelink">About</a></li>
+	        		<li><a href="/cv" class="pagelink">CV</a></li>
+	        		<li><a href="/blog" class="pagelink">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
