--- a/css/main.css
+++ b/css/main.css
@@ -15,22 +15,22 @@ nav ul li, footer ul li {
 }
 
 /* PUBLICATIONS LINK COLORS */
-.cv a:link {
+a.cv:link {
 color: blue;
 text-decoration: none;
 }
 
-.cv a:visited {
+a.cv:visited {
 color: purple;
 text-decoration: none;
 }
 
-.cv a:hover {
+a.cv:hover {
 color: red;
 text-decoration: none;
 }
 
-.cv a:hover {
+a.cv:hover {
 color: yellow;
 text-decoration: none;
 }
