--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,13 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+
+p.publications {
+    font-size: 1em;
+    line-height: 1.4em;
+    color: #333;
+}
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
