--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		</head>
 		<body>
 			<nav>
@@ -14,8 +14,7 @@
 	        		<li><a href="/cv" class="pagelink">CV</a></li>
 	        		<li><a href="/blog" class="pagelink">Blog</a></li>
 	    		</ul>
-			</nav>
-						<!-- Add font awesome icons -->
+									<!-- Add font awesome icons -->
 			<a href="#" class="fa fa-facebook"></a>
 			<a href="#" class="fa fa-twitter"></a>
 			<a href="#" class="fa fa-google"></a>
@@ -36,6 +35,7 @@
 			<a href="#" class="fa fa-yahoo"></a>
 			<a href="#" class="fa fa-reddit"></a>
 			<a href="#" class="fa fa-rss"></a>
+			</nav>
 			<div class="container">
 			
 			{{ content }}
