--- a/css/main.css
+++ b/css/main.css
@@ -93,12 +93,12 @@ ul.about li {
 .fa:hover {
     opacity: 0.7;
 }
-
+/*
 .fa-facebook {
   background: #3B5998;
   color: white;
 }
-
+*/
 .fa-twitter {
   background: #55ACEE;
   color: white;
@@ -114,6 +114,12 @@ ul.about li {
   color: white;
 }
 
+.fa-rss {
+  background: #ff6600;
+  color: white;
+}
+
+/*
 .fa-youtube {
   background: #bb0000;
   color: white;
@@ -134,6 +140,7 @@ ul.about li {
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+
 
 .fa-skype {
   background: #00aff0;
@@ -194,8 +201,4 @@ ul.about li {
   background: #ff5700;
   color: white;
 }
-
-.fa-rss {
-  background: #ff6600;
-  color: white;
-}
+*/
