--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
 			<a href="#" class="fa fa-google"></a>
 			<a href="#" class="fa fa-linkedin"></a>
 			<a href="#" class="fa fa-rss"></a>
+			<i class="ai ai-google-scholar-square ai-3x"></i>
+
 			</nav>
 			<div class="container">
 			
