--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			<a href="#" class="fa fa-google"></a>
 			<a href="#" class="fa fa-linkedin"></a>
 			<a href="#" class="fa fa-rss"></a>
-			<i class="ai ai-google-scholar-square ai-3x"></i>
+			<i class="ai ai-google-scholar ai-3x"></i> <!-- -square tag optional-->
 
 			</nav>
 			<div class="container">
