--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			<!-- <a href="#" class="fa fa-google"></a> -->
 			<a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a>
 			<!-- <a href="" class="fa fa-rss"></a> -->
-			<a href="http://scholar.google.com/citations?user=f0PW5J8AAAAJ" <i class="ai ai-google-scholar ai-3x"></i> ></a> <!-- -square tag optional-->
+			<a href="http://scholar.google.com/citations?user=f0PW5J8AAAAJ" class="ai ai-google-scholar ai-3x"></a> <!-- -square tag optional-->
 
 			</nav>
 			<div class="container">
