--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,15 @@ ul.about li {
   margin: 5px 2px;
 }
 
+.ai {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
 .fa:hover {
     opacity: 0.7;
 }
