--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<!-- Reference for academic icons: https://jpswalsh.github.io/academicons/ -->
 			<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		</head>
 		<body>
 			<nav>
@@ -17,7 +18,6 @@
 	        		<li><a href="/cv" class="pagelink">CV</a></li>
 	        		<li><a href="/blog" class="pagelink">Blog</a></li>
 	    		</ul>
-									<!-- Add font awesome icons -->
 			<a href="https://twitter.com/salihyanikgonul" class="fa fa-twitter"></a>
 			<!-- <a href="#" class="fa fa-google"></a> -->
 			<a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a>
@@ -33,8 +33,12 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:salih001@ntu.edu.sg">email</a></li>
-	        		<li><a href="https://github.com/salihyanikgonul">github.com/salihyanikgonul</a></li>
+	        		<li><a href="mailto:salih001@ntu.edu.sg">
+					<i class="material-icons" style="font-size:36px"></i>
+					</a></li>
+	        		<li><a href="https://github.com/salihyanikgonul">
+					<i class="material-icons" style="font-size:36px">
+					</a></li>
 				</ul>
 			</footer>
 		</body>
