--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,16 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:salih001@ntu.edu.sg">
-					<i class="material-icons" style="font-size:36px"></i>
-					</a></li>
-	        		<li><a href="https://github.com/salihyanikgonul">
-					<i class="material-icons" style="font-size:36px">
-					</a></li>
+	        		<li>
+					<a href="mailto:salih001@ntu.edu.sg">
+						<i class="material-icons" style="font-size:36px"></i>
+					</a>
+				</li>
+	        		<li>
+					<a href="https://github.com/salihyanikgonul">
+						<i class="material-icons" style="font-size:36px">
+					</a>
+				</li>
 			</ul>
 			</footer>
 		</body>
