--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,12 +35,12 @@
 	    		<ul>
 	        		<li>
 					<a href="mailto:salih001@ntu.edu.sg">
-						<i class="material-icons" style="font-size:36px"></i>
+						<i class="material-icons" style="font-size:36px">email</i>
 					</a>
 				</li>
 	        		<li>
 					<a href="https://github.com/salihyanikgonul">
-						<i class="material-icons" style="font-size:36px">
+						<i class="material-icons" style="font-size:36px">email</i>
 					</a>
 				</li>
 			</ul>
