--- a/css/main.css
+++ b/css/main.css
@@ -90,36 +90,50 @@ ul.about li {
   margin: 5px 2px;
 }
 
+.fa:hover {
+    opacity: 0.7;
+}
+
 .ai {
   padding: 20px;
-  font-size: 30px;
+  font-size: 60px;
   width: 50px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
 }
 
-.fa:hover {
+.ai:hover {
     opacity: 0.7;
 }
-/*
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-*/
+
 .fa-twitter {
-  background: #55ACEE;
+  background: black; /* #55ACEE */
   color: white;
 }
 
 .fa-google {
-  background: #dd4b39;
+  background: black; /* #dd4b39 */
   color: white;
 }
 
 .fa-linkedin {
-  background: #007bb5;
+  background: black; /* #007bb5*/
+  color: white;
+}
+
+.fa-github {
+  background: black;
+  color: white;
+}
+
+.ai-google-scholar {
+  background: white;
+  color: black;
+}
+
+.fa-facebook {
+  background: #3B5998;
   color: white;
 }
 
@@ -128,7 +142,6 @@ ul.about li {
   color: white;
 }
 
-/*
 .fa-youtube {
   background: #bb0000;
   color: white;
