--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,7 @@
 					</a>
 				</li>
 	        		<li>
-					<a href="https://github.com/salihyanikgonul">
-						<i class="material-icons" style="font-size:36px">email</i>
-					</a>
+					<a href="https://github.com/salihyanikgonul"> class="fa fa-github"></a>
 				</li>
 			</ul>
 			</footer>
