--- a/css/main.css
+++ b/css/main.css
@@ -84,10 +84,11 @@ ul.about li {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 50px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
+  border-radius: 50%;
 }
 
 .fa:hover {
