--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:salih001@ntu.edu.sg" <i class="material-icons" style="font-size:36px">email</i>></li>
+	        		<li><a href="mailto:salih001@ntu.edu.sg"><i class="material-icons" style="font-size:36px">email</i></li>
 	        		<li><a href="https://github.com/salihyanikgonul" class="fa fa-github"></a></li>
 			</ul>
 			</footer>
