--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			<a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a>
 			<!-- <a href="" class="fa fa-rss"></a> -->
 			<a href="http://scholar.google.com/citations?user=f0PW5J8AAAAJ">
-				<i class="ai ai-google-scholar-square ai-3x"></i>
+				<i class="ai ai-google-scholar ai-3x"></i>
 			</a> <!-- -square tag optional-->
 			</nav>
 			<div class="container">
