--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ ul.about li {
 .fa {
   padding: 10px;
   font-size: 40px;
-  width: 40px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
   margin: 2px 2px;
@@ -98,7 +98,7 @@ ul.about li {
 .ai {
   padding: 10px;
   font-size: 40px;
-  width: 40px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
   margin: 2px 2px;
@@ -124,7 +124,7 @@ ul.about li {
   color: white;
   padding: 20px;
   font-size: 40px;
-  width: 40px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
   margin: 2px 2px;
@@ -135,6 +135,13 @@ ul.about li {
 .ai-google-scholar {
   background: white;
   color: black;
+  padding: 20px;
+  font-size: 40px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 2px 2px;
+  border-radius: 50%;
 }
 
 /*
