--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,24 +19,20 @@
 	        		<li><a href="/cv" class="pagelink">CV</a></li>
 	        		<li><a href="/blog" class="pagelink">Blog</a></li>
 	    		</ul>
-			<a href="https://twitter.com/salihyanikgonul" class="fa fa-twitter"></a>
-			<!-- <a href="#" class="fa fa-google"></a> -->
-			<a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a>
-			<!-- <a href="" class="fa fa-rss"></a> -->
-			<a href="http://scholar.google.com/citations?user=f0PW5J8AAAAJ">
-				<i class="ai ai-google-scholar ai-3x"></i>
-			</a> <!-- -square tag optional-->
 			</nav>
 			<div class="container">
 			
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:salih001@ntu.edu.sg"><i class="material-icons" style="font-size:48px;color:black;">email</i></li>
-	        		<li><a href="https://github.com/salihyanikgonul" class="fa fa-github"></a></li>
-			</ul>
+				<footer>
+				<ul>
+					<li><a href="mailto:salih001@ntu.edu.sg"><i class="material-icons" style="font-size:48px;color:black;">email</i></a></li>
+					<li><a href="https://github.com/salihyanikgonul" class="fa fa-github"></a></li>
+					<li><a href="https://twitter.com/salihyanikgonul" class="fa fa-twitter"></a></li>
+					<li><a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a></li>
+					<li><a href="http://scholar.google.com/citations?user=f0PW5J8AAAAJ"><i class="ai ai-google-scholar ai-3x"></i></a></li>
+				</ul>
 			</footer>
 		</body>
 	</html>
