--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 			</div><!-- /.container -->
 				<footer>
 				<ul>
-					<li><a href="mailto:salih001@ntu.edu.sg"><i class="material-icons" style="font-size:48px;color:black;">email</i></a></li>
+					<li><a href="mailto:salih001@ntu.edu.sg"><i class="material-icons" style="font-size:40px;color:black;text-align:center;text-decoration:none;margin: 2px 2px;">email</i></a></li>
 					<li><a href="https://github.com/salihyanikgonul" class="fa fa-github"></a></li>
 					<li><a href="https://twitter.com/salihyanikgonul" class="fa fa-twitter"></a></li>
 					<li><a href="https://sg.linkedin.com/in/salih-yan%C4%B1kg%C3%B6n%C3%BCl-b3382654" class="fa fa-linkedin"></a></li>
